syntax = "proto3";

option java_package = "ru.yandex.ci.api.internal";

import "google/protobuf/empty.proto";
import "ci/tasklet/common/proto/service.proto";

//TODO логически разделить на сервисы, как придет время
service InternalApi {
    rpc Ping (google.protobuf.Empty) returns (Time);
    rpc UpdateTaskletProgress (ci.TaskletProgress) returns (google.protobuf.Empty);
    rpc GetCommits (ci.GetCommitsRequest) returns (ci.GetCommitsResponse);
}

message Time {
    uint64 timestamp_millis = 1;
    string host = 2;
}
